<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_screen">My App PortFolio</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">Popular Movies</string>
    <string name="super_duo1">Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="ant_terminator">Build It Bigger</string>
    <string name="materialize">XYZ Reader</string>
    <string name="capstone">Capstone</string>
    <string name="app_name_p1">Popular Movies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_descr_movie_poster">Movie Poster ImageView</string>
    <string name="settings_title">Sort Order</string>
    <string name="settings_dialog_title">Change Sort Order</string>
    <string name="settings">Settings</string>
    <string name="titleMovieDetail">Movie Detail</string>
    <string name="network_error_msg">Network Error Please Retry Later...</string>
    <string name="imagethumbnail_for_movie_trailer">ImageThumbnail for movie Trailer</string>
    <string name="trailer">TRAILERS</string>
    <string name="review">REVIEWS</string>
    <string name="favorite">Mark As %1$S</string>
    <string name="select_movie_list_coach_mark">Select Movie List</string>
    <string name="share_trailer">ShareTrailer</string>
    <string name="no_application_found">No Application Found For Sharing Trailer</string>
</resources>
