<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?actionBarSize"
    android:layout_gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
  >
    <TextView
        android:id="@+id/my_app_title"
        style="@style/AppTitle"
        android:text="@string/my_title"
        />
    <Button
        android:layout_below="@id/my_app_title"
        style="@style/AppButton"
        android:id="@+id/popularMovies"
        android:text="@string/media_streamer"
        android:onClick="onClickButton1"
        />
    <Button
        android:id="@+id/button2"
        android:layout_below="@id/popularMovies"
        style="@style/AppButton"
        android:text="@string/super_duo1"
        android:onClick="onClickButton2"
      />
    <Button
        android:id="@+id/button3"
        android:layout_below="@id/button2"
        style="@style/AppButton"
        android:text="@string/super_duo2"
        android:onClick="onClickButton3"
        />
    <Button
        android:id="@+id/button4"
        android:layout_below="@id/button3"
        style="@style/AppButton"
        android:text="@string/ant_terminator"
        android:onClick="onClickButton4"
        />
    <Button
        android:id="@+id/button5"
        android:layout_below="@id/button4"
        style="@style/AppButton"
        android:text="@string/materialize"
        android:onClick="onClickButton5"
        />
    <Button
        android:id="@+id/button6"
        android:layout_below="@id/button5"
        style="@style/AppButton.ChangeBackground"
        android:text="@string/capstone"
        android:onClick="onClickButton6"
        />
</RelativeLayout>
